fixed bug tht breaks the server

--- a/myList/public/stylesheets/style.css
+++ b/myList/public/stylesheets/style.css
@@ -76,6 +76,10 @@ body{
 }
 .centeredDiv{
   padding: 1em 1em;
+  text-align: left;
+}
+.albumArt, .centeredDiv{
+  cursor: pointer;
 }
 
 /*.scrollable{*/
